--- a/ODExplorer/App.xaml
+++ b/ODExplorer/App.xaml
@@ -15,9 +15,10 @@
                 <ResourceDictionary Source="/ODExplorer;component/Themes/ControlStyles.xaml" />
             </ResourceDictionary.MergedDictionaries>
 
-            <System:String x:Key="AppVersion">v0.9.3</System:String>
+            <System:String x:Key="AppVersion">0.9.4</System:String>
 
             <settings:Settings x:Key="AppSettings" />
+
         </ResourceDictionary>
     </Application.Resources>
 </Application>
