--- a/ODExplorer/AboutBox/AboutBox.xaml
+++ b/ODExplorer/AboutBox/AboutBox.xaml
@@ -13,7 +13,7 @@
         WindowStartupLocation="CenterOwner"
         ShowInTaskbar="False"
         Width="580"
-        Height="380"     
+        Height="495"
         ResizeMode="NoResize">
     <WindowChrome.WindowChrome>
         <WindowChrome CaptionHeight="34" />
@@ -27,7 +27,7 @@
     </Window.CommandBindings>
 
     <Border x:Name="MainWindowBorder"
-            BorderBrush="{DynamicResource MainWindowBackground}"
+            BorderBrush="{DynamicResource Groupbox Border}"
             BorderThickness="0">
         <Grid>
             <Grid.RowDefinitions>
@@ -75,7 +75,11 @@
                 </Grid.ColumnDefinitions>
                 <Grid.RowDefinitions>
                     <RowDefinition Height="20" />
-                    <RowDefinition Height="*" />
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
                     <RowDefinition Height="Auto" />
                     <RowDefinition Height="20" />
                 </Grid.RowDefinitions>
@@ -89,7 +93,7 @@
                         <TextBlock Text="OD Explorer "
                                    FontSize="22"
                                    VerticalAlignment="Center" />
-                        <TextBlock Text="{StaticResource AppVersion}"
+                        <TextBlock Text="{Binding Source={StaticResource AppVersion}, StringFormat={}v{0}}"
                                    FontSize="22"
                                    VerticalAlignment="Center" />
                     </StackPanel>
@@ -101,11 +105,15 @@
                                Margin="0,5" />
                 </StackPanel>
 
-                <StackPanel Grid.Row="2"
+                <TextBlock Grid.Row="2"
+                           Grid.Column="1"
+                           Text="Icon Credits"
+                           VerticalAlignment="Center"
+                           Margin="0,5" />
+                
+                <StackPanel Grid.Row="3"
                             Grid.Column="1">
-                    <TextBlock Text="Icon Credits"
-                               VerticalAlignment="Center"
-                               Margin="0,10,0,5" />
+
                     <StackPanel Orientation="Horizontal">
                         <Image Source="/Images/astronaut.png"
                                Height="18"
@@ -163,6 +171,104 @@
                                    Margin="10,5,20,0"
                                    Fill="White">
                             <Rectangle.OpacityMask>
+                                <ImageBrush ImageSource="/Images/earth.png" />
+                            </Rectangle.OpacityMask>
+                        </Rectangle>
+
+                        <TextBlock VerticalAlignment="Center">
+                        <Hyperlink NavigateUri="https://www.flaticon.com/authors/turkkub"
+                                   RequestNavigate="Hyperlink_RequestNavigate"
+                                   Foreground="{DynamicResource Font Colour}">
+                            turkkub on wwww.flaticon.com
+                        </Hyperlink>
+                        </TextBlock>
+                    </StackPanel>
+
+                    <StackPanel Orientation="Horizontal">
+                        <Rectangle Height="18"
+                                   Width="18"
+                                   Margin="10,5,20,0"
+                                   Fill="White">
+                            <Rectangle.OpacityMask>
+                                <ImageBrush ImageSource="/Images/jupiter.png" />
+                            </Rectangle.OpacityMask>
+                        </Rectangle>
+
+                        <TextBlock VerticalAlignment="Center">
+                        <Hyperlink NavigateUri="https://www.flaticon.com/authors/nikita-golubev"
+                                   RequestNavigate="Hyperlink_RequestNavigate"
+                                   Foreground="{DynamicResource Font Colour}">
+                            nikita-golubev on wwww.flaticon.com
+                        </Hyperlink>
+                        </TextBlock>
+                    </StackPanel>
+
+                    <StackPanel Orientation="Horizontal">
+                        <Rectangle Height="18"
+                                   Width="18"
+                                   Margin="10,5,20,0"
+                                   Fill="White">
+                            <Rectangle.OpacityMask>
+                                <ImageBrush ImageSource="/Images/language.png" />
+                            </Rectangle.OpacityMask>
+                        </Rectangle>
+
+                        <TextBlock VerticalAlignment="Center">
+                        <Hyperlink NavigateUri="https://www.flaticon.com/authors/srip"
+                                   RequestNavigate="Hyperlink_RequestNavigate"
+                                   Foreground="{DynamicResource Font Colour}">
+                            srip on wwww.flaticon.com
+                        </Hyperlink>
+                        </TextBlock>
+                    </StackPanel>
+
+                    <StackPanel Orientation="Horizontal">
+                        <Rectangle Height="18"
+                                   Width="18"
+                                   Margin="10,5,20,0"
+                                   Fill="White">
+                            <Rectangle.OpacityMask>
+                                <ImageBrush ImageSource="/Images/water.png" />
+                            </Rectangle.OpacityMask>
+                        </Rectangle>
+
+                        <TextBlock VerticalAlignment="Center">
+                        <Hyperlink NavigateUri="https://www.flaticon.com/authors/kornkun"
+                                   RequestNavigate="Hyperlink_RequestNavigate"
+                                   Foreground="{DynamicResource Font Colour}">
+                            kornkun on wwww.flaticon.com
+                        </Hyperlink>
+                        </TextBlock>
+                    </StackPanel>
+
+                    <StackPanel Orientation="Horizontal">
+                        <Rectangle Height="18"
+                                   Width="18"
+                                   Margin="10,5,20,0"
+                                   Fill="White">
+                            <Rectangle.OpacityMask>
+                                <ImageBrush ImageSource="/Images/saturn.png" />
+                            </Rectangle.OpacityMask>
+                        </Rectangle>
+
+                        <TextBlock VerticalAlignment="Center">
+                        <Hyperlink NavigateUri="https://www.flaticon.com/authors/good-ware"
+                                   RequestNavigate="Hyperlink_RequestNavigate"
+                                   Foreground="{DynamicResource Font Colour}">
+                            Good Ware on wwww.flaticon.com
+                        </Hyperlink>
+                        </TextBlock>
+                    </StackPanel>
+                    </StackPanel>
+
+                <StackPanel Grid.Row="3"
+                            Grid.Column="3">
+                    <StackPanel Orientation="Horizontal">
+                        <Rectangle Height="18"
+                                   Width="18"
+                                   Margin="10,5,20,0"
+                                   Fill="White">
+                            <Rectangle.OpacityMask>
                                 <ImageBrush ImageSource="/Images/asteroid.png" />
                             </Rectangle.OpacityMask>
                         </Rectangle>
@@ -194,6 +300,27 @@
                         </Hyperlink>
                         </TextBlock>
                     </StackPanel>
+                    
+                    <StackPanel Orientation="Horizontal">
+                        <Rectangle Height="18"
+                                   Width="18"
+                                   Margin="10,5,20,0"
+                                   Fill="White">
+                            <Rectangle.OpacityMask>
+                                <ImageBrush ImageSource="/Images/Cooling-Tower.png" />
+                            </Rectangle.OpacityMask>
+                        </Rectangle>
+
+                        <TextBlock VerticalAlignment="Center">
+                        <Hyperlink NavigateUri="https://www.freepik.com"
+                                   RequestNavigate="Hyperlink_RequestNavigate"
+                                   Foreground="{DynamicResource Font Colour}">
+                            Freepik
+                        </Hyperlink>
+                        </TextBlock>
+                    </StackPanel>
+
+
 
                     <StackPanel Orientation="Horizontal">
                         <Rectangle Height="18"
@@ -252,29 +379,59 @@
                         </TextBlock>
                     </StackPanel>
 
+                    <StackPanel Orientation="Horizontal">
+                        <Rectangle Height="18"
+                                   Width="18"
+                                   Margin="10,5,20,0"
+                                   Fill="White">
+                            <Rectangle.OpacityMask>
+                                <ImageBrush ImageSource="/Images/cooling-tower.png" />
+                            </Rectangle.OpacityMask>
+                        </Rectangle>
+
+                        <TextBlock VerticalAlignment="Center">
+                        <Hyperlink NavigateUri="https://www.freepik.com"
+                                   RequestNavigate="Hyperlink_RequestNavigate"
+                                   Foreground="{DynamicResource Font Colour}">
+                            FreePik
+                        </Hyperlink>
+                        </TextBlock>
+                    </StackPanel>
                 </StackPanel>
 
                 <TextBlock Grid.Row="1"
                            Grid.Column="3"
-                           FontSize="10"
+                           FontSize="12"
                            TextWrapping="WrapWithOverflow">
                     A big thanks to MagicMau for creating Elite Journal Reader which saved me a bunch of time.<LineBreak />
                     <LineBreak />
-                    Also thanks to joncage for creating EDScout which provided the inspriation for this project, EDSM and spansh for their fantastic websites and resources.
+                    Also thanks to joncage for creating EDScout which provided the inspriation for this project, EDSM and Spansh for their fantastic websites and resources.
                 </TextBlock>
 
-                <StackPanel Grid.Row="2"
-                            Grid.Column="3">
-                    <TextBlock Text="Links"
-                               VerticalAlignment="Center"
-                               Margin="0,10,0,5" />
-                    
+                <TextBlock  Grid.Row="4"
+                            Grid.Column="1"
+                            Text="Links"
+                           VerticalAlignment="Center"
+                           Margin="0,5" />
+                
+                <StackPanel Grid.Row="5"
+                            Grid.Column="1">
+
                     <TextBlock VerticalAlignment="Center"
                                Margin="20,0,0,5">
                         <Hyperlink NavigateUri="https://github.com/WarmedxMints/OD-Explorer"
                                    RequestNavigate="Hyperlink_RequestNavigate"
                                    Foreground="{DynamicResource Font Colour}">
                             GitHub Project
+                        </Hyperlink>
+                    </TextBlock>
+
+                    <TextBlock VerticalAlignment="Center"
+                               Margin="20,0,0,5">
+                        <Hyperlink NavigateUri="https://github.com/WarmedxMints/OD-Explorer/releases"
+                                   RequestNavigate="Hyperlink_RequestNavigate"
+                                   Foreground="{DynamicResource Font Colour}">
+                            Lastest Release
                         </Hyperlink>
                     </TextBlock>
 
@@ -295,7 +452,10 @@
                             OD Explorer Elite Journal Reader Fork
                         </Hyperlink>
                     </TextBlock>
-                    
+                </StackPanel>
+                
+                <StackPanel Grid.Row="5"
+                            Grid.Column="3">
                     <TextBlock VerticalAlignment="Center"
                                Margin="20,0,0,5">
                         <Hyperlink NavigateUri="https://github.com/joncage/ed-scout"
@@ -327,7 +487,7 @@
 
                 <Button Content="OK"
                         Grid.Column="3"
-                        Grid.Row="2"
+                        Grid.Row="6"
                         Width="80"
                         Height="20"
                         VerticalAlignment="Bottom"
